# quick-board

./: .gitignore  Cargo.toml  README.md  build.rs  paint.sln
benches/: test.rs
dev/rust-sdl2-master/examples/: gfx-demo.rs
examples/: gfx-demo.rs
markup/: Cargo.toml
markup/src/: lib.rs
paint/: App.axaml  App.axaml.cs  paint.csproj
paint.Desktop/: Program.cs  paint.Desktop.csproj
paint/ViewModels/: MainViewModel.cs  ViewModelBase.cs
paint/Views/: MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
proptest-regressions/app/: style_align.txt
proptest-regressions/view/: style.txt
src/: app.rs  debug.rs  div.rs  main.rs  main.rs__  main.rs~  main.rz~  main_plgrd.rs  main_test.rs  relay.rs  style.rs  transform.rs  view.rs
src/app/: action_pump.rs  align_vec.rs  border.rs  brush_tool.rs  button.rs  canvas_manager.rs  color_display.rs  color_map.rs  color_operations.rs  coords.rs  cursor.rs  display_vec.rs  drag.rs  draw_window.rs  element_map.rs  element_vec.rs  event_manager.rs  fill_tool.rs  history.rs  history_step.rs  input_state.rs  layer.rs  move_tool.rs  observed.rs  pointer_state.rs  predefined.rs  predefined_styles.rs  sample_tool.rs  slider.rs  style_align.rs  style_display.rs  texture_data.rs  texture_manager.rs  texture_vec.rs  tool_trait.rs  txt.rs  ui_element.rs  ui_manager.rs  ui_map.rs
src/relay/: action_pump.rs
src/view/: action_state.rs  app.rs  button.rs  color_map.rs  config.rs  coords.rs  div.rs  event_manager.rs  pointer_state.rs  states.rs  style.rs  style_align.rs  style_display.rs  style_map.rs  ui_builder.rs  ui_element.rs  ui_manager.rs  ui_state.rs
