[package]
name = "quick-board"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.6.0"

[dependencies]
markup = { path = "markup" }
enum-map = "2.7.3"
enum_dispatch = "0.3.13"
indices = "0.3.6"
palette = "0.7.6"
num = "0.4.3"

# [dependencies]
# num_enum = "0.7.3"

[dependencies.sdl2]
version = "0.37"
# default-features = true
default-features = false

# to use "bundled", "static-link"
# I need to switch to "Windows, Linux and macOS with vcpkg"
# more info: https://github.com/Rust-SDL2/rust-sdl2/issues/981#issuecomment-747685910
features = ["ttf","image","unsafe_textures","gfx","static-link","use-vcpkg"]


[[bench]]
name = "main"
harness = false


[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
rev = "2025.04.09" # to check for a new one, check https://github.com/microsoft/vcpkg/releases

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
